# embedded-ratatui-workshop

./: PREPARATION.md  README.md
apps/simulator/: Cargo.toml  README.md
apps/simulator/src/: main.rs
template/: Cargo.toml  README.md  build.rs
template/src/: app.rs  button.rs  lib.rs  main.rs  setup.rs
wlan_scanner/: Cargo.toml  README.md
wlan_scanner/.cargo/: config.toml
wlan_scanner/src/: button.rs  main.rs
