[package]
name = "ratatui-wlan-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section"] }
mipidsi = "0.9.0"
mousefood = "0.2.1"
rand = "0.8"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[profile.release]
opt-level = 3

[profile.dev]
debug = true
opt-level = 3
